# hpcg

./: CMakeLists.txt  README.md
src/: CG.cpp  CG.hpp  CGData.hpp  CG_ref.cpp  CG_ref.hpp  CheckProblem.cpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_SyCL.cpp  ComputeDotProduct_SyCL.hpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_SyCL.cpp  ComputeMG_SyCL.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeProlongation_SyCL.cpp  ComputeProlongation_SyCL.hpp  ComputeProlongation_ref.cpp  ComputeResidual.cpp  ComputeResidual.hpp  ComputeRestriction_SyCL.cpp  ComputeRestriction_SyCL.hpp  ComputeRestriction_ref.cpp  ComputeSPMV.cpp  ComputeSPMV_SyCL.cpp  ComputeSPMV_SyCL.hpp  ComputeSPMV_ref.cpp  ComputeSPMV_ref.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeSYMGS_SyCL.cpp  ComputeSYMGS_SyCL.hpp  ComputeSYMGS_ref.cpp  ComputeSYMGS_ref.hpp  ComputeWAXPBY.cpp  ComputeWAXPBY_SyCL.cpp  ComputeWAXPBY_SyCL.hpp  (+19 more)
